solutions for problem set

--- a/lab.ipynb
+++ b/lab.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -174,6 +174,11 @@
     "    :return: Normalized image data\n",
     "    \"\"\"\n",
     "    # ToDo: Implement Min-Max scaling for greyscale image data\n",
+    "    factor = 0.8 # (b - a)\n",
+    "    x_range = 255 # (X_max - X_min)\n",
+    "    image_scaled = 0.1 + (factor*image_data)/(x_range)\n",
+    "    \n",
+    "    return image_scaled\n",
     "\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
@@ -198,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -347,14 +352,12 @@
     "labels_count = 10\n",
     "\n",
     "# ToDo: Set the features and labels tensors\n",
-    "# features = \n",
-    "# labels = \n",
+    "features = tf.placeholder(tf.float32)\n",
+    "labels = tf.placeholder(tf.float32)\n",
     "\n",
     "# ToDo: Set the weights and biases tensors\n",
-    "# weights = \n",
-    "# biases = \n",
-    "\n",
-    "\n",
+    "weights = tf.Variable(tf.truncated_normal([features_count, labels_count]))\n",
+    "biases = tf.Variable(tf.zeros([labels_count]))\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
     "\n",
@@ -410,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -471,17 +474,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# ToDo: Find the best parameters for each configuration\n",
-    "# epochs = \n",
-    "# batch_size = \n",
-    "# learning_rate = \n",
+    "# Best configuration for set 1 of parameters. Variation of batch_size\n",
+    "# epochs = 1\n",
+    "# batch_size = 50\n",
+    "# learning_rate = 0.01\n",
     "\n",
+    "# Best configuration for set 2 of parameters. Variation of learning_rate\n",
+    "# 0.74 accuracy\n",
+    "# epochs = 1\n",
+    "# batch_size = 100\n",
+    "# learning_rate = 0.1\n",
+    "\n",
+    "# Best configuration for set 3 of parameters. Variation of epoch\n",
+    "# 0.78 accuracy\n",
+    "epochs = 5\n",
+    "batch_size = 100\n",
+    "learning_rate = 0.2\n",
     "\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
@@ -562,18 +577,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# ToDo: Set the epochs, batch_size, and learning_rate with the best parameters from problem 3\n",
-    "# epochs = \n",
-    "# batch_size = \n",
-    "# learning_rate = \n",
-    "\n",
-    "\n",
+    "epochs = 5\n",
+    "batch_size = 100 \n",
+    "learning_rate = 0.2\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
     "# The accuracy measured against the test set\n",
